https://github.com/javers/javers/issues/708 - small fix for creating class instance